--- a/css/style.css
+++ b/css/style.css
@@ -320,6 +320,7 @@ header .fa-bars{
     font-size          : 1.5rem;
     /* background-image   : url("img/bg/cool-background.png") no-repeat; */
     box-shadow         : 0px 0px 30px rgba(255,236,164,255);
+    background-color: #ffeca4;
 }
 
 
